Authenticated the api functionality
