# storage/api-docs/api-docs.json
@@ -13,16 +13,103 @@
         "version": "2.0.0"
     },
     "paths": {
+        "/users": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "description": "Get list of users",
+                "operationId": "getListOfUsers",
+                "responses": {
+                    "200": {
+                        "description": "Get list of users.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "integer"
+                                                    },
+                                                    "name": {
+                                                        "type": "string"
+                                                    },
+                                                    "email": {
+                                                        "type": "string"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/brands": {
             "get": {
                 "tags": [
                     "Brands"
                 ],
+                "summary": "Display a listing of the resource.",
                 "description": "Displays all the brands",
-                "operationId": "0c71439e213e1b284fc37995d74bca2b",
+                "operationId": "3c41aa2e65314941e37a634e810c5f73",
                 "responses": {
                     "200": {
-                        "description": "Successful operation, Returns a list of Computers in JSON format"
+                        "description": "Successful operation, Returns a list of Brands in JSON format"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/api/brands/{id}": {
+            "get": {
+                "tags": [
+                    "Brands"
+                ],
+                "summary": "Display the specified resource.",
+                "description": "Gets a brand by ID",
+                "operationId": "767f67c0955810b713c48d4100f02362",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Brand id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
                     },
                     "401": {
                         "description": "Unauthenticated"
@@ -40,7 +127,7 @@
                 ],
                 "summary": "Display a listing of the resource.",
                 "description": "Displays all the computers",
-                "operationId": "a9d13283dfab262e97af3c914d51b7a8",
+                "operationId": "029d3ac261c5df77562cae68e690f3cd",
                 "responses": {
                     "200": {
                         "description": "Successful operation, Returns a list of Computers in JSON format"
@@ -73,7 +160,9 @@
                                     "processor",
                                     "storage",
                                     "ram",
-                                    "price"
+                                    "price",
+                                    "brand_id",
+                                    "developers"
                                 ],
                                 "properties": {
                                     "title": {
@@ -89,32 +178,45 @@
                                     "brand": {
                                         "type": "string",
                                         "format": "string",
-                                        "example": "Autobiography"
+                                        "example": "Dell"
                                     },
                                     "graphics_card": {
                                         "type": "string",
                                         "format": "string",
-                                        "example": "Me"
+                                        "example": "RTX 3070"
                                     },
                                     "processor": {
                                         "type": "string",
                                         "format": "string",
-                                        "example": "Me"
+                                        "example": "intel i9"
                                     },
                                     "storage": {
                                         "type": "string",
                                         "format": "string",
-                                        "example": "Me"
+                                        "example": "512 GB"
                                     },
                                     "ram": {
                                         "type": "string",
                                         "format": "string",
-                                        "example": "Me"
+                                        "example": "8 GB"
                                     },
                                     "price": {
                                         "type": "string",
                                         "format": "string",
-                                        "example": "Me"
+                                        "example": "1600"
+                                    },
+                                    "brand_id": {
+                                        "type": "json",
+                                        "format": "json",
+                                        "example": 2
+                                    },
+                                    "developers": {
+                                        "type": "json",
+                                        "format": "json",
+                                        "example": [
+                                            1,
+                                            3
+                                        ]
                                     }
                                 },
                                 "type": "object"
@@ -142,7 +244,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/computers/{id}": {
@@ -152,7 +259,7 @@
                 ],
                 "summary": "Display the specified resource.",
                 "description": "Gets a computer by ID",
-                "operationId": "2fdd668eb661591758aff4c56ca9b66a",
+                "operationId": "1244ba519c2f0a0843f22a23dd4f6134",
                 "parameters": [
                     {
                         "name": "id",
@@ -175,6 +282,122 @@
                         "description": "Forbidden"
                     }
                 }
+            },
+            "put": {
+                "tags": [
+                    "Computers"
+                ],
+                "summary": "Update an existing Computer",
+                "description": "Updates the computer in the DB",
+                "operationId": "update",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Id of a Computer",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "title",
+                                    "description",
+                                    "brand",
+                                    "graphics_card",
+                                    "processor",
+                                    "storage",
+                                    "ram",
+                                    "price",
+                                    "brand_id"
+                                ],
+                                "properties": {
+                                    "title": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "Sample Title"
+                                    },
+                                    "description": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "A long description about this computer"
+                                    },
+                                    "brand": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "Me"
+                                    },
+                                    "graphics_card": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "Me"
+                                    },
+                                    "processor": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "Me"
+                                    },
+                                    "storage": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "Me"
+                                    },
+                                    "ram": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "Me"
+                                    },
+                                    "price": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "Me"
+                                    },
+                                    "developers": {
+                                        "type": "json",
+                                        "format": "json",
+                                        "example": [
+                                            1,
+                                            3
+                                        ]
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "integer",
+                                            "example": ""
+                                        },
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -214,7 +437,76 @@
                             }
                         }
                     }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/developers": {
+            "get": {
+                "tags": [
+                    "Developers"
+                ],
+                "summary": "Display a listing of the resource.",
+                "description": "Displays all the developers",
+                "operationId": "5d4d2fcb34324751c78c26412bbfc10c",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation, Returns a list of Developers in JSON format"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
                 }
+            }
+        },
+        "/api/developers/{id}": {
+            "get": {
+                "tags": [
+                    "Developers"
+                ],
+                "summary": "Display the specified resource.",
+                "description": "Gets a developer by ID",
+                "operationId": "e1d46842f7196b812b00df3e26c99fac",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Developer id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        }
+    },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "name": "bearerAuth",
+                "in": "header",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
             }
         }
     }
